--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
 # catch要求打开异常
 string(REGEX REPLACE "-fno-exceptions" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
 
-set(TEST test.cc arenaTest.cc)
+set(TEST test.cc arenaTest.cc statusTest.cc)
 add_executable(utest ${TEST})
 add_dependencies(utest store)
 target_link_libraries(utest store)
