--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,12 +6,14 @@
 # @author niexw
 # @email xiaowen.nie.cn@gmail.com
 #
-include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
+include_directories(${CMAKE_SOURCE_DIR}/include/ ${CMAKE_SOURCE_DIR}/src)
 
+find_package(Catch2 REQUIRED)
 # catch要求打开异常
-string(REGEX REPLACE "-fno-exceptions" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
+# string(REGEX REPLACE "-fno-exceptions" "" CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS)
 
-set(TEST test.cc arenaTest.cc statusTest.cc)
+# set(TEST test.cc arenaTest.cc statusTest.cc)
+set(TEST arenaTest.cc statusTest.cc)
 add_executable(utest ${TEST})
 add_dependencies(utest store)
-target_link_libraries(utest store)
+target_link_libraries(utest store Catch2::Catch2WithMain)
